fix mouse selected text not visible in some pages

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10,10 +10,10 @@
 /* app css stylesheet */
 
 ::selection { /* Safari */
-    background: rgba(218,209,203,0.3);
+    background: rgba(198,189,183,0.3);
 }
 ::-moz-selection { /* Firefox */
-    background: rgba(218,209,203,0.3);
+    background: rgba(198,189,183,0.3);
 }
 
 body{
